--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
  *.[oa]
 #ignorer le dossier metadata
 /metadata
+
+
+Library/assetDatabase3
+Library/metadata/00/00000000000000004000000000000000
+Library/shadercompiler-UnityShaderCompiler.exe0.log
