--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 Library/assetDatabase3
 Library/metadata/00/00000000000000004000000000000000
 Library/shadercompiler-UnityShaderCompiler.exe0.log
+Library/metadata/*
 
 metadata/
 Temp/
