--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ Library/assetDatabase3
 Library/metadata/00/00000000000000004000000000000000
 Library/shadercompiler-UnityShaderCompiler.exe0.log
 Library/metadata/*
-
+#toto
 metadata/
 Temp/
 Library/metadata/
