--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,7 +45,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\litcontroller.cs" />
      <Compile Include="Assets\script\Camera_Controller.cs" />
      <Compile Include="Assets\script\ClickerMover.cs" />
      <Compile Include="Assets\script\DwarfController.cs" />
@@ -57,6 +56,7 @@
      <Compile Include="Assets\script\ObjectTransporter.cs" />
      <Compile Include="Assets\script\Skills.cs" />
      <Compile Include="Assets\script\eatscript.cs" />
+     <Compile Include="Assets\script\litcontroller.cs" />
      <Compile Include="Assets\script\sleepscript.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
